Fix CSRF origins

--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,9 @@
 DJANGO_SECRET_KEY="secret"
 
 # Your site's hostname. Do not include slashes or schema.
-HOSTNAME=mysite.com
+HOSTNAME=gms.mysite.com
+# For sharing cookies with root domain
+CSRF_COOKIE_DOMAIN=.mysite.com
 
 # Postgres database credentials
 DB_NAME=webapp
