--- a/webapp/home/static/home/subsite/genome/data.yml
+++ b/webapp/home/static/home/subsite/genome/data.yml
@@ -1,11 +1,11 @@
 id: data
 tabs:
 - content:
-  - button_link: $GALAXY_URL/tool_runner?tool_id=upload1
+  - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=upload1"
     description_html: <p>Standard upload of data to Galaxy, from your computer or
       from the web.</p>
     title_html: Import data to Galaxy
-  - button_link: $GALAXY_URL/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fdevteam%2Ffastqc%2Ffastqc
+  - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fdevteam%2Ffastqc%2Ffastqc"
     description_html: <p>Before using your sequencing data, it&apos;s important first
       ensure that the data quality is sufficient for your analysis.</p>
     inputs:
@@ -16,14 +16,14 @@ tabs:
     - datatypes:
       - sam
     title_html: <code>FastQC</code> - sequence quality reports
-  - button_link: $GALAXY_URL/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Ffastp%2Ffastp
+  - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Ffastp%2Ffastp"
     description_html: <p>Faster run than FastQC, this tool can also trim reads and
       filter by quality.</p>
     inputs:
     - datatypes:
       - fastq
     title_html: <code>FastP</code> - sequence quality reports, trimming & filtering
-  - button_link: $GALAXY_URL/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fnanoplot%2Fnanoplot
+  - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fnanoplot%2Fnanoplot"
     description_html: <p>A plotting suite for Oxford Nanopore sequencing data and
       alignments.</p>
     inputs:
@@ -34,7 +34,7 @@ tabs:
     - datatypes:
       - vcf_bgzip
     title_html: <code>NanoPlot</code> - visualize Oxford Nanopore data
-  - button_link: $GALAXY_URL/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fgenomescope%2Fgenomescope
+  - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fgenomescope%2Fgenomescope"
     description_html: <p>A set of metrics and graphs to visualize genome size and
       complexity prior to assembly.</p>
     inputs:
@@ -42,7 +42,7 @@ tabs:
       - tabular
       label: Output from <code>Meryl</code> or <code>Jellyfish histo</code>
     title_html: <code>GenomeScope</code> - estimate genome size
-  - button_link: $GALAXY_URL/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fmeryl%2Fmeryl
+  - button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fmeryl%2Fmeryl"
     description_html: <p>Prepare kmer count histogram for input to GenomeScope.</p>
     inputs:
     - datatypes:
@@ -55,21 +55,21 @@ tabs:
   id: tools
   title: Tools
 - content:
-  - button_link: $GALAXY_URL/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=222
+  - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=222"
     button_tip: Import to Galaxy AU
     description_html: '<p> Report statistics from sequencing reads. <br> <br> Tools:
       <code>nanoplot</code> <code>fastqc</code> <code>multiqc</code> </p>'
     title_html: Data QC
     view_link: https://workflowhub.eu/workflows/222
     view_tip: View in WorkflowHub
-  - button_link: $GALAXY_URL/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=223
+  - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=223"
     button_tip: Import to Galaxy AU
     description_html: '<p> Estimates genome size and heterozygosity based on counts
       of kmers. <br> <br> Tools: <code>meryl</code> <code>genomescope</code> </p>'
     title_html: Kmer counting to estimate genome size
     view_link: https://workflowhub.eu/workflows/223
     view_tip: View in WorkflowHub
-  - button_link: $GALAXY_URL/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=224
+  - button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=224"
     button_tip: Import to Galaxy AU
     description_html: '<p> Trims and filters raw sequence reads according to specified
       settings. <br> <br> Tools: <code>fastp</code> </p>'
