Fix yaml formatting

--- a/webapp/home/labs/proteomics/database_searching.yml
+++ b/webapp/home/labs/proteomics/database_searching.yml
@@ -43,7 +43,7 @@ tabs:
           - datatypes:
               - fasta
               - uniprotxml
-            label: MS Protein Search Database: UniProt Xml or Fasta
+            label: "MS Protein Search Database: UniProt Xml or Fasta"
         button_link: "{{ galaxy_base_url }}/root?tool_id=toolshed.g2.bx.psu.edu/repos/galaxyp/morpheus/morpheus/"
   - id: help
     title: Help
